# Amphibena

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  ThirdPartyNotices.txt  demo.json  pyproject.toml  requirements-codequality.txt  requirements.txt
.github/workflows/: code-consistency.yml  style.yml  tests.yml
amphivena/: __main__.py  controller.py  gui.py  logger.conf  mitm.py  packet_processing.py  packet_processor.py  playbook.py  playbook_utils.py
amphivena/gui/: edit_window.py  json_editor.py  main_window.py
tests/: conftest.py  demo.json  test_packet_processing.py  test_playbook_core.py
tests/playbooks/: demo.json
tests/playbooks/bad_format/: no_actions.json
tests/playbooks/packet_processing/: ordered_drop_tcp.json  ordered_edit_tcp_consecutive_packets.json  ordered_edit_tcp_multiple_steps_same_packet.json
