[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry]
name = "amphivena"
version = "0.0.0"
description = "Python-based MitM tool for exercising packet manipulation with byte-level precision."
authors = ["Alex Massi"]
readme = "README.md"
license = "AGPL-3"

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.4.5"
NetfilterQueue = "^1.0.0"
jsonschema = "^4.16.0"
cryptography = "37.0.4" # Locked on 9/17/22 until scapy fixes issue from v38

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.11"
flake8-deprecated = "^1.3"
flake8-executable = "^2.1.1"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.1.0a6"] # Known bug as of 9/17/22
build-backend = "poetry.core.masonry.api"
