[tool.pytest.ini_options]
pythonpath = ["."]

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true

[tool.black]
line-length = 88
skip-magic-trailing-comma = true

[tool.bandit]
exclude_dirs = ["./tests/"]

[tool.poetry]
name = "amphivena"
version = "0.0.0"
description = "Python-based MitM tool for exercising packet manipulation with byte-level precision."
authors = ["Alex Massi"]
readme = "README.md"
license = "AGPL-3"

[tool.poetry.dependencies]
python = "3.9.12" # 10/17/22 Bumped/locked down to silence teardown issue in multiprocessing_logging (issue #56)
scapy = "^2.4.5"
NetfilterQueue = "^1.0.0"
jsonschema = "^4.16.0"
cryptography = "37.0.4" # Locked on 9/17/22 until scapy fixes issue from v38
multiprocessing-logging = "^0.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.11"
flake8-deprecated = "^1.3"
flake8-executable = "^2.1.1"
bandit = {extras = ["toml"], version = "^1.7.4"}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"] # Known bug as of 9/17/22
build-backend = "poetry.core.masonry.api"
