[project]
name = "amphivena"
version = "0.0.0"
description = "Python-based MitM tool for exercising packet manipulation with byte-level precision."
authors = [{name = "Alex Massi"}]
readme = "README.md"
license = {text = "AGPL-3"}

[build-system]
requires=["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["amphivena"]
